JEDIT VERSION HISTORY

* Version 2.4final

+ Enhancements

- The text area should now retain focus when switching windows

+ Bug Fixes

- Context menus were not added to newly created text areas when splitting
  (since 2.4pre7)

* Version 2.4pre7

+ New Features

- The text area right-click menu can now be edited in the Global Options
  dialog box. Any action whatsoever (including plugin actions) can be added
  to the menu now

+ Enhancements

- Firewall plugin sources moved to their own fileset
- The 'Open' and 'Save As' dialog boxes are now loaded in a background thread
  with minimum priority once jEdit has started
- Documentation updates
- Menu item mnemonics no longer shown in context menu

+ Bug Fixes

- JEditTextArea.addNotify() now sets focusedComponent if hasFocus() returns
  true (this should finally solve the 'caret losing focus' problem) (since
  1.7pre5)
- Sometimes a 'Save As' wouldn't update the buffer tab (since 2.4pre6)
- TokenMarker.linesChanged() tweaked once again -- this should result in more
  accurate syntax highlighting when lines are being deleted, for example
  (since 2.4pre1)
- select-document-home and select-document-end actions didn't have key bindings
  (since 2.4pre6)
- Double-clicking and dragging backwards didn't select the word that you
  double-clicked originally (since 2.3pre2)

* Version 2.4pre6

+ New Features

- In C-like modes, the indent will be shifted if the previous line contains
  an 'if', 'else', 'while', 'for' or 'case' statement. This is implemented
  using a regular expression in the 'indentPrevLine' buffer-local property
- The Firewall plugin by Dirk Moebius <dmoebius@gmx.net> is now included
  in the core download. The Firewall plugin allows you to use the plugin
  manager and latest version check behind a firewall

+ Enhancements

- XML mode now opens all files whose first line contains <?xml in XML mode
- XSL mode now highlights JavaScript in <xsl:script> and <xsl:eval> tags
  (Oliver Rutherfurd)