@@ -64,6 +64,9 @@
 		<SEQ TYPE="NULL">;</SEQ>
 		<SEQ TYPE="NULL">?</SEQ>
 		<SEQ TYPE="NULL">:</SEQ>
+		<SEQ TYPE="NULL">'</SEQ>
+		<SEQ TYPE="NULL">"</SEQ>
+		<SEQ TYPE="NULL">`</SEQ>
 	</RULES>
 
 	<RULES SET="MATH" DEFAULT="KEYWORD2">
@@ -103,6 +106,9 @@
 		<SEQ TYPE="KEYWORD2">;</SEQ>
 		<SEQ TYPE="KEYWORD2">?</SEQ>
 		<SEQ TYPE="KEYWORD2">:</SEQ>
+		<SEQ TYPE="KEYWORD2">'</SEQ>
+		<SEQ TYPE="KEYWORD2">"</SEQ>
+		<SEQ TYPE="KEYWORD2">`</SEQ>
 
 		<!-- comments -->
 		<EOL_SPAN TYPE="COMMENT1">%</EOL_SPAN>
