@@ -1,6 +1,5 @@
 [global]
 EMAIL|sp@gjt.org
-HOMEPAGE|http://www.geocities.com/slava_pestov
 JEDIT|http://www.gjt.org/~sp/jedit.html
 
 [java]
